# GigaTIME-vmp

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  manual_test.py  pyproject.toml  requirements.txt
config/: settings.py
integrations/: azure_config.py  azure_integrator.py  gemini_integrator.py  gemini_interpreter.py  huggingface_integrator.py  prediction_reducer.py  preprocessing.py  provider_base.py
models/: job_status.py  spatial_summary_payload.py  spatial_summary_result.py  wsi_payload.py
server/: mcp_server.py  registry.py
store/: job_store.py
tests/: test_huggingface_integrator.py
tools/: analyze_slide.py  base_tool.py  fetch_biomarkers.py  summarize_spatial_architecture.py
