[project]
name = "GigaTIME-vmp"
version = "0.1.0"
description = "A robust, type-safe, modular, and deterministic MCP server."
dependencies = [
    "mcp>=1.27.0,<2.0.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "huggingface-hub>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
